lambda/k8s/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
      - uri:
          exact: /version
      - uri:
          prefix: /create/savings/account
      route:
        - destination:
            host: app-zerotohero-svc
            port:
              number: 9080
